add xorg-video-abi-14 as alternative dependency
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/310@3614 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,7 @@ nvidia-graphics-drivers (310.32-1) UNRELEASED; urgency=low
       graphics card with a TV connector has no TV connected.
   * Restrict watch file to releases from the 310.xx long lived branch.
   * Update nv-readme.ids.
+  * Add xorg-video-abi-14 as alternative dependency.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 25 Jan 2013 18:13:28 +0100
 
