new upstream short lived branch release 313.26
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/313@3651 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (313.26-1) UNRELEASED; urgency=low
+
+  * New upstream short lived branch release 313.26 (2013-03-05).
+    - Added support for the following GPU: GeForce GTX TITAN.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 10 Mar 2013 18:15:08 +0100
+
 nvidia-graphics-drivers (313.18-2) experimental; urgency=low
 
   * Update my email address and remove DMUA.
