--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nvidia-graphics-drivers (304.84-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.84-1) unstable; urgency=low
 
-  * New upstream long lived branch release 304.84 (2013-03-04).
+  * New upstream legacy 304xx branch release 304.84 (2013-03-04).
     - Improved compatibility with recent Linux kernels.
     - Fixed a bug that could lead to rendering corruption after an X
       server generation (i.e., leaving an X server running after all
-      of its clients have exited).
+      of its clients have exited).  (Closes: #700121, #696839)
     - Fixed a bug that could cause the X server to crash when performing
       an RandR 1.0 rotation (e.g., `xrandr --orientation left`) after
       unplugging the last connected monitor.
@@ -25,7 +25,7 @@ nvidia-graphics-drivers (304.84-1) UNRELEASED; urgency=low
   * nvidia-vdpau-driver: Move to Section: non-free/video.  (See #700666)
   * Update my email address and remove DMUA.
 
- -- Andreas Beckmann <anbe@debian.org>  Sun, 10 Mar 2013 12:47:53 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 12 Mar 2013 08:55:25 +0100
 
 nvidia-graphics-drivers (304.64-4) unstable; urgency=low
 
