--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ nvidia-graphics-drivers (304.84-1) unstable; urgency=low
   * README.alternatives: Document to run
     'dpkg-reconfigure glx-alternative-nvidia'
     after running 'update-alternatives --config nvidia'.  (See #702782)
+  * patch-3.0-rt-nvidia.patch: Remove, disabled since 304.30-2.
   * Update my email address and remove DMUA.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 12 Mar 2013 08:55:25 +0100
