--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-nvidia-graphics-drivers (313.26-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (313.26-1) experimental; urgency=low
 
   * New upstream short lived branch release 313.26 (2013-03-05).
     - Added support for the following GPU: GeForce GTX TITAN.
   * Merge changes from 304.84-1 and 310.40 (UNRELEASED).
   * Update nv-readme.ids.
 
- -- Andreas Beckmann <anbe@debian.org>  Sun, 10 Mar 2013 18:15:08 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 16 Mar 2013 13:15:10 +0100
 
 nvidia-graphics-drivers (313.18-2) experimental; urgency=low
 
