--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ nvidia-graphics-drivers (313.26-1) experimental; urgency=low
     - Added support for the following GPU: GeForce GTX TITAN.
   * Merge changes from 304.84-1 and 310.40 (UNRELEASED).
   * Update nv-readme.ids.
+  * Update symbols control files.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 16 Mar 2013 13:15:10 +0100
 
