--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (304.88-2) UNRELEASED; urgency=low
+
+  * Update lintian overrides.
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 03 Apr 2013 11:21:46 +0200
+
 nvidia-graphics-drivers (304.88-1) unstable; urgency=low
 
   * New upstream legacy 304xx branch release 304.88 (2013-04-02).
