--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 nvidia-graphics-drivers (304.88-2) UNRELEASED; urgency=low
 
   * Update lintian overrides.
+  * libcuda1: Add missing Depends: nvidia-support. Postinst may fail if
+    nvidia-support is unpacked, but not configured.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 03 Apr 2013 11:21:46 +0200
 
