--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nvidia-graphics-drivers (304.88-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.88-2) unstable; urgency=low
 
   * Update lintian overrides.
   * libcuda1: Add missing Depends: nvidia-support. Postinst may fail if
     nvidia-support is unpacked, but not configured.
 
- -- Andreas Beckmann <anbe@debian.org>  Wed, 03 Apr 2013 11:21:46 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 02 May 2013 12:20:20 +0200
 
 nvidia-graphics-drivers (304.88-1) unstable; urgency=low
 
