--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (304.88-3) UNRELEASED; urgency=low
+
+  * nvidia-alternative: Add slave alternatives for nvidia-settings.
+    (Closes: #688753)
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 04 May 2013 21:53:05 +0200
+
 nvidia-graphics-drivers (304.88-2) unstable; urgency=low
 
   * Update lintian overrides.
