use canonical Vcs-* URLs
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3719 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (304.88-3) UNRELEASED; urgency=low
 
   * nvidia-alternative: Add slave alternatives for nvidia-settings.
     (Closes: #688753)
+  * Use canonical Vcs-* URLs.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 04 May 2013 21:53:05 +0200
 
