--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nvidia-graphics-drivers (304.88-3) UNRELEASED; urgency=low
   * nvidia-alternative: Add slave alternatives for nvidia-settings.
     (Closes: #688753)
   * Use canonical Vcs-* URLs.
+  * Bump Standards-Version to 3.9.4. No changes needed. 
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 04 May 2013 21:53:05 +0200
 
