drop Conflicts/Breaks/Replaces against packages predating wheezy
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3727 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (304.88-3) UNRELEASED; urgency=low
   * Use canonical Vcs-* URLs.
   * Bump Standards-Version to 3.9.4. No changes needed. 
   * Drop transitional packages.
+  * Drop Conflicts/Breaks/Replaces against packages predating wheezy.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 04 May 2013 21:53:05 +0200
 
