--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ nvidia-graphics-drivers (304.88-3) UNRELEASED; urgency=low
   * Bump Standards-Version to 3.9.4. No changes needed. 
   * Drop transitional packages.
   * Drop Conflicts/Breaks/Replaces against packages predating wheezy.
+  * Drop cleanup code targeting squeeze and wheezy from maintainer scripts.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 04 May 2013 21:53:05 +0200
 
