recommend nvidia-settings (>= MAJOR)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3806 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (304.88-3) UNRELEASED; urgency=low
     cannot be parsed correctly for inserting into Built-Using.
   * nvidia-alternative: Add slave alternatives for nvidia-settings.
     (Closes: #688753)
+  * Recommend nvidia-settings (>= MAJOR). 
   * Use canonical Vcs-* URLs.
   * Bump Standards-Version to 3.9.4. No changes needed. 
   * Drop transitional packages.  (Closes: #687506)
