--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (304.88-3) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.88-3) unstable; urgency=low
 
   * nvidia-cuda-proxy: New package for nvidia-cuda-proxy-{control,server}.
   * nvidia-kernel-source: rules: Use placeholder substitution for the source
@@ -14,7 +14,7 @@ nvidia-graphics-drivers (304.88-3) UNRELEASED; urgency=low
   * Drop cleanup code targeting squeeze and wheezy from maintainer scripts.
   * Update lintian overrides.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 04 May 2013 21:53:05 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 12 May 2013 23:44:53 +0200
 
 nvidia-graphics-drivers (304.88-2) unstable; urgency=low
 
