--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (304.88-4) UNRELEASED; urgency=low
+
+  * nvidia-libopencl1: Prefer nvidia-opencl-icd over opencl-icd.
+
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 13 May 2013 01:54:19 +0200
+
 nvidia-graphics-drivers (304.88-3) unstable; urgency=low
 
   * nvidia-cuda-proxy: New package for nvidia-cuda-proxy-{control,server}.
