update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/313@3823 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (313.30-2) UNRELEASED; urgency=low
 
   * Merge changes from 304.88-3 and 310.51 (UNRELEASED).
+  * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 13 May 2013 02:14:04 +0200
 
