--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-nvidia-graphics-drivers (313.30-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (313.30-2) experimental; urgency=low
 
   * Merge changes from 304.88-3 and 310.51 (UNRELEASED).
   * Update lintian overrides.
 
- -- Andreas Beckmann <anbe@debian.org>  Mon, 13 May 2013 02:14:04 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 13 May 2013 02:41:43 +0200
 
 nvidia-graphics-drivers (313.30-1) experimental; urgency=low
 
