restrict watch file to releases from the 313.xx short lived branch
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/313@3829 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (313.30-3) UNRELEASED; urgency=low
+
+  * Restrict watch file to releases from the 313.xx short lived branch.
+
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 13 May 2013 03:27:40 +0200
+
 nvidia-graphics-drivers (313.30-2) experimental; urgency=low
 
   * Merge changes from 304.88-3 and 310.51 (UNRELEASED).
