--- a/debian/changelog
+++ b/debian/changelog
@@ -86,6 +86,7 @@ nvidia-graphics-drivers (319.17-1) UNRELEASED; urgency=low
     - Switched .run package compression from gzip to xz.  This provides a
       higher level of compression.
   * Update nv-readme.ids.
+  * Refresh use-nv-kernel.o.ARCH.patch. Remove frequently changing context.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 13 May 2013 02:52:47 +0200
 
