--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 nvidia-graphics-drivers (304.88-4) UNRELEASED; urgency=low
 
   * nvidia-libopencl1: Prefer nvidia-opencl-icd over opencl-icd.
+  * Rename package nvidia-cuda-proxy to nvidia-cuda-mps: Upstream has renamed
+    the programs nvidia-cuda-proxy-* to nvidia-cuda-mps-* in release 319.xx.
+  * libcuda1: Add Suggests: nvidia-cuda-mps.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 13 May 2013 01:54:19 +0200
 
